[build-system]
requires = ["setuptools", "setuptools-scm", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cint"
authors = [
    {name = "Dominik 'Disconnect3d' Czarnota", email = "dominik.b.czarnota+cint@gmail.com"}
]
description = "cint - make ctypes great again"
readme = "README.md"
requires-python = ">=3.4,<4"
keywords = ["cint", "ctypes", "int", "integer", "integers", "fixed-integers", "sized-integers"]
license = {text = "MIT"}
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'License :: OSI Approved :: MIT License',
    'Programming Language :: Python :: 3',
]
dependencies = []
dynamic = ["version"]

[project.optional-dependencies]
tests = ["pytest"]
